<resources>
    <string name="app_name">Success Payment</string>
    <string name="select_payment_type">Select Payment Type</string>
    <string name="credit_card">Credit Card</string>
    <string name="mobile_money">Mobile Money</string>
    <string name="select_provider">Select Mobile Provider</string>
    <string name="mtn">MTN</string>
    <string name="orange">Orange</string>
    <string name="moov">Moov</string>
    <string name="button_continue">Continue</string>
    <string name="success_logo_desc">Success logo</string>
    <string name="hint_enter_amount">Enter Amount</string>
    <string name="next_button_text">Next</string>
    <string name="pre_authorization">Pre-Authorization</string>
    <string name="authorization">Authorization</string>
    <string name="refund">Refund</string>
    <string name="qr_code">QR code for payment</string>
</resources>