<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <ImageView
        android:id="@+id/logoimage"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btnPreAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pre_authorization"
        android:minHeight="48dp"
        android:padding="12dp" />

    <Button
        android:id="@+id/btnAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorization"
        android:minHeight="48dp"
        android:padding="12dp" />

    <Button
        android:id="@+id/btnRefund"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refund"
        android:layout_marginTop="12dp"
        android:minHeight="48dp"
        android:padding="12dp"/>

</LinearLayout>